--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -382,10 +382,10 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                        <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                        <li><a href="pages/charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                        <li><a href="pages/charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                        <li><a href="pages/charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                        <li><a href="pages/charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>
+                        <li><a href="pages/charts/flot"><i class="fa fa-circle-o"></i> Flot</a></li>
+                        <li><a href="pages/charts/inline"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
