--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -363,7 +363,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="pages/widgets">
+                    <a href="pages/widgets.html">
                         <i class="fa fa-th"></i> <span>Widgets</span>
                         <span class="pull-right-container">
               <small class="label pull-right bg-green">new</small>
@@ -467,7 +467,7 @@
                 </li>
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-share"></i> <span>Multilevel</span>
+                        <i class="fa fa-share"></i> <span>Multi </span>
                         <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
