--- a/app/templates/image_identification.html
+++ b/app/templates/image_identification.html
@@ -1,58 +1,292 @@
 <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename="bootstrap-fileinput/css/fileinput.css") }}">
+    <!-- bootstrap 4.x is supported. You can also use the bootstrap css 3.3.x versions -->
+    <link rel="stylesheet" href="{{ url_for('static', filename="bower_components/bootstrap/dist/css/bootstrap.css") }}">
+    <link href="{{ url_for('static', filename="bootstrap-fileinput/css/fileinput.css") }}" media="all" rel="stylesheet" type="text/css"/>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- if using RTL (Right-To-Left) orientation, load the RTL CSS file after fileinput.css by uncommenting below -->
+    <!-- link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.9/css/fileinput-rtl.min.css" media="all" rel="stylesheet" type="text/css" /-->
+    <script src="{{ url_for('static', filename="bower_components/jquery/dist/jquery.min.js") }}" type="text/javascript"></script>
+    <!-- piexif.min.js is needed for auto orienting image files OR when restoring exif data in resized images and when you
+        wish to resize images before upload. This must be loaded before fileinput.min.js -->
+    <script src="{{ url_for('static', filename="bootstrap-fileinput/js/plugins/piexif.js") }}" type="text/javascript"></script>
+    <!-- sortable.min.js is only needed if you wish to sort / rearrange files in initial preview.
+        This must be loaded before fileinput.min.js -->
+    <script src="{{ url_for('static', filename="bootstrap-fileinput/js/plugins/sortable.js") }}" type="text/javascript"></script>
+    <!-- purify.min.js is only needed if you wish to purify HTML content in your preview for
+        HTML files. This must be loaded before fileinput.min.js -->
+    <script src="{{ url_for('static', filename="bootstrap-fileinput/js/plugins/purify.js") }}" type="text/javascript"></script>
+    {#    <!-- popper.min.js below is needed if you use bootstrap 4.x. You can also use the bootstrap js#}
+    {#       3.3.x versions without popper.min.js. -->#}
+    {#    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>#}
+
+    <!-- bootstrap.min.js below is needed if you wish to zoom and preview file content in a detail modal
+        dialog. bootstrap 4.x is supported. You can also use the bootstrap js 3.3.x versions. -->
+    <script src="{{ url_for('static', filename="bower_components/bootstrap/dist/js//bootstrap.js") }}" type="text/javascript"></script>
+    <!-- the main fileinput plugin file -->
     <script src="{{ url_for('static', filename="bootstrap-fileinput/js/fileinput.js") }}"></script>
-    <script src="{{ url_for('static', filename="bootstrap-fileinput/js/plugins/sortable.js") }}"></script>
+    <!-- optionally if you need a theme like font awesome theme you can include it as mentioned below -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.4.9/themes/fa/theme.js"></script>
+    <!-- optionally if you need translation for your language then include  locale file as mentioned below -->
+    <script src="{{ url_for('static', filename="bootstrap-fileinput/js/locales/zh.js") }}"></script>
+
+    <!-- Slimscroll -->
+    <script src="{{ url_for('static', filename="bower_components/jquery-slimscroll/jquery.slimscroll.min.js") }}"></script>
 
 </head>
 {% extends "base.html" %}
 
 {% block body %}
-    <div class="container">
-        <div class="row" style="margin-top: 20px;">
-            <div class="col-md-8" aria-orientation="vertical">
-                <form enctype="multipart/form-data">
-                    <div class="file-loading">
-                        <input id="kv-explorer" type="file" multiple>
-                    </div>
-                    <br>
-                    <div class="file-loading">
-                        <input id="file-0a" class="file" type="file" multiple data-min-file-count="0">
-                    </div>
-                    <br>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                    <button type="reset" class="btn btn-default">Reset</button>
-                </form>
+    <div id="file_wrap">
+        <form method="POST" role="form" id="S1" enctype="multipart/form-data">
+            <div class="file-loading">
+                <input id="file-pic" class="file" type="file" multiple>
+            </div>
+        </form>
+    </div>
+    <div id="result" hidden>
+        <!-- 表格显示 -->
+        <div class="row">
+            <div class="col-md-12" style="margin-top:20px;">
+                <div class="panel panel-info">
+                    <div class="panel-heading">审核结果</div>
+                    <table id="table" class="table table-striped table-bordered table-hover datatable">
+                        <thead id="tem">
+                        <th id="file_name">文件</th>
+                        <th id="upload_time">上传时间</th>
+                        <th id="porn">色情</th>
+                        <th id="sexy">性感</th>
+                        <th id="normal">正常</th>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
-        <div class="row" style="margin-top: 100px;background: #f71752;">
-            <div class="col-md-4">
-                <img src="{{ url_for('static', filename="dist/img/user1-128x128.jpg") }}" alt="User Image">
-                <a class="users-list-name" href="#">Alexander Pierce</a>
-                <span class="users-list-date">Today</span>
+
+        <!-- 页面底部显示 -->
+        <!-- 每页显示几条记录 -->
+        <div id="bottomTool" class="row-fluid">
+            <div class="span6" style="width:25%;;margin-right: 10px;">
+                <div class="dataTables_length" id="DataTables_Table_0_length">
+                    <label>
+                        每页
+                        <select id="pageSize" onchange="research()"
+                                aria-controls="DataTables_Table_0" size="1" name="DataTables_Table_0_length">
+                            <option selected="selected" value="10">10</option>
+                            <option value="25">25</option>
+                            <option value="50">50</option>
+                            <option value="100">100</option>
+                        </select>
+                        条记录
+                    </label>
+                </div>
             </div>
-            <div class="col-md-4">
-                <img src="{{ url_for('static', filename="dist/img/user1-128x128.jpg") }}" alt="User Image">
-                <a class="users-list-name" href="#">Alexander Pierce</a>
-                <span class="users-list-date">Today</span>
+            <!-- 显示第 1 至 10 项记录，共 57 项 -->
+            <div class="span6" style="width:25%;">
+                <div id="DataTables_Table_0_info" class="dataTables_info">显示第 1 至 10 项记录，共 57 项</div>
             </div>
-            <div class="col-md-4">
-                <img src="{{ url_for('static', filename="dist/img/user1-128x128.jpg") }}" alt="User Image">
-                <a class="users-list-name" href="#">Alexander Pierce</a>
-                <span class="users-list-date">Today</span>
+            <!-- 第2页 -->
+            <div class="span6" style="width:30%;">
+                <div class="dataTables_paginate paging_bootstrap pagination">
+                    <ul id="previousNext">
+                        <li onclick="previous()" class="prev disabled"><a id="previousPage" href="#">← 上一页</a></li>
+                        <div id="page" style="float:left;">
+                            <select id="pageNum" onchange="search()"
+                                    style="width:50PX;margin-right:1px;" aria-controls="DataTables_Table_0" size="1" name="DataTables_Table_0_length">
+                                <option selected="selected" value="1">1</option>
+                            </select>
+                        </div>
+                        <li class="next" onclick="next()"><a id="nextPage" href="#">下一页 → </a></li>
+                    </ul>
+                </div>
             </div>
+
         </div>
     </div>
+    <script>
+        $('#file-pic').fileinput({
+            theme: 'fa',
+            language: 'zh',
+            uploadUrl: 'upload_images',
+            allowedFileExtensions: ['jpg', 'png', 'gif']
+        }).on("fileuploaded", function (event, data) {
+            console.log(data);
+            $('#file_wrap').hide(true);
+            $('#result').show(true);
+            //搜索按钮绑定回车事件
+            document.onkeydown = function (event) {
+                if (event.keyCode === 13) {
+                    event.cancelBubble = true;
+                    event.returnValue = false;
+                    search();
+                }
+            }
+        });
+
+        //下一步
+        function next() {
+            //得到当前选中项的页号
+            const id = $("#pageNum option:selected").val();
+            //计算下一页的页号
+            const nextPage = parseInt(id) + 1;
+            //得到select的option集合
+            const list = document.getElementById("pageNum").options;
+            //得到select中，下一页的option
+            const nextOption = list[nextPage - 1];
+            //修改select的选中项
+            nextOption.selected = true;
+            //调用查询方法
+            search();
+        }
+
+        //上一步
+        function previous() {
+
+            //得到当前选中项的页号
+            const id = $("#pageNum option:selected").val();
+            //计算上一页的页号
+            const previousPage = parseInt(id) - 1;
+            //得到select的option集合
+            const list = document.getElementById("pageNum").options;
+            //得到select中，上一页的option
+            const previousOption = list[previousPage - 1];
+            //修改select的选中项
+            previousOption.selected = true;
+            //调用查询方法
+            search();
+        }
+
+        //修改每页显示条数时，要从第一页开始查起
+        function research() {
+            //得到select的option集合
+            const list = document.getElementById("pageNum").options;
+            //得到select中，第一页的option
+            const nextOption = list[0];
+            //修改select的选中项
+            nextOption.selected = true;
+            //调用查询方法
+            search();
+        }
+
+        //搜索，模糊查询学生违纪信息
+        function search() {
+            //得到查询条件
+            const searchString = $("#searchString").val();
+            //得到每页显示条数
+            const pageSize = $("#pageSize").val();
+            //得到显示第几页
+            const pageNum = $("#pageNum").val();
+
+            $.ajax({
+                type: "POST",
+                async: false,
+                url: "query_data",
+                data: {
+                    "search_string": searchString,
+                    "page_size": pageSize,
+                    "page_num": pageNum,
+                },
+                dataType: "text",
+                success: function (data) {
+                    let i;
+                    //将json字符串转为json对象
+                    const pageEntity = JSON.parse(data);
+                    //得到结果集
+                    const obj = pageEntity["rows"];
+
+                    //将除模板行的thead删除，即删除之前的数据重新加载
+                    $("thead").eq(0).nextAll().remove();
+                    //将获取到的数据动态的加载到table中
+                    for (i = 0; i < obj.length; i++) {
+                        //获取模板行，复制一行
+                        const row = $("#tem").clone();
+
+                        //给每一行赋值
+                        row.find("#studentId").text(obj[i].studentId); //学号
+                        row.find("#studentName").text(obj[i].studentName);   //学生姓名
+                        row.find("#courseId").text(obj[i].courseId);     //课程名称
+                        row.find("#examRoomId").text(obj[i].examRoomId);     //考场号
+                        row.find("#className").text(obj[i].className);     //所属班级
+                        row.find("#teacherId").text(obj[i].teacherId);     //监考教师Id
+
+                        //将新行添加到表格中
+                        row.appendTo("#table");
+                    }
+                    //当前记录总数
+                    const pageNumCount = pageEntity["total"];
+                    //当前记录开始数
+                    const pageNumBegin = (pageNum - 1) * pageSize + 1;
+                    //当前记录结束数
+                    let pageNumEnd = pageNum * pageSize;
+                    //如果结束数大于记录总数，则等于记录总数
+                    if (pageNumEnd > pageNumCount) {
+                        pageNumEnd = pageNumCount;
+                    }
+                    //得到总页数
+                    let pageCount;
+                    if (pageNumCount / pageSize === 0) {
+                        pageCount = pageNumCount / pageSize;
+                    } else {
+                        pageCount = Math.ceil(pageNumCount / pageSize);
+                    }
+
+                    //输出"显示第 1 至 10 项记录，共 57 项"
+                    document.getElementById("DataTables_Table_0_info").innerHTML =
+                        "显示第" + pageNumBegin.toString()
+                        + " 至 " + pageNumEnd.toString()
+                        + " 项记录，共 " + pageNumCount.toString() + " 项";
+
+                    //显示所有的页码数
+                    const pageSelect = document.getElementById("page");
+                    const pageOption = "";
+                    let flag;
+                    //删除select下所有的option，清除所有页码
+                    document.getElementById("pageNum").options.length = 0;
+                    for (i = 0; i < pageCount; i++) {
+                        flag = (i + 1).toString();
+                        let option;
+                        //如果等于当前页码
+                        if (flag === pageNum) {
+                            //实例化一个option,则当前页码为选中状态
+                            option = new Option(flag, flag, false, true);
+                        } else {
+                            option = new Option(flag, flag, false, false);
+                        }
+                        //将option加入select中
+                        document.getElementById("pageNum").options.add(option);
+                    }
+
+                    //如果总记录数小于5条，则不显示分页
+                    if ((pageNumCount - 5) < 0) {
+                        document.getElementById("bottomTool").style.display = "none";
+                    } else {
+                        document.getElementById("bottomTool").style.display = "";
+                    }
+
+                    /**给上一步下一步加颜色**/
+                    //判断是否只有一页
+                    if (pageCount === 1) {
+
+                        //如果只有一页，上一步，下一步都为灰色
+                        $("#previousPage").css("color", "#AAA");//给上一步加灰色
+                        $("#nextPage").css("color", "#AAA");//给下一步加灰色
+                    } else if (pageNum - 1 < 1) {
+                        //如果是首页,则给上一步加灰色，下一步变蓝
+                        $("#previousPage").css("color", "#AAA");//给上一步加灰色
+                        $("#nextPage").css("color", "#00F");//给下一步加蓝色
+                    } else if (pageNum === pageCount) {
+                        //如果是尾页,则给上一步加蓝色，下一步灰色
+                        $("#previousPage").css("color", "#00F");//给上一步标签加蓝色
+                        $("#nextPage").css("color", "#AAA");//给下一步标签加灰色
+                    } else {
+                        //上一步为蓝色，下一步为绿色
+                        $("#previousPage").css("color", "#00F");//给上一步加蓝色
+                        $("#nextPage").css("color", "#00F");//给下一步加蓝色
+                    }
+                }
+            });
+        }
+    </script>
 {% endblock %}
 
-
-<script>
-    $("#import_file").fileinput({
-        theme: 'fa',
-        language: 'fr',
-        uploadUrl: '#',
-        allowedFileExtensions: ['jpg', 'png', 'gif']
-    });
-
-</script>
