--- a/app/templates/natural_semantic.html
+++ b/app/templates/natural_semantic.html
@@ -1,15 +1,19 @@
 {% extends "base.html" %}
 {% block body %}
-    <div class="container">
-        <div class="col-md-4">
-            <div class="form-group">
-                <label>NATURAL_SEMANTIC</label>
-                <select class="form-control select2" style="width: 100%;">
-                    <option selected="selected">1天1次</option>
-                    <option>7天1次</option>
-                </select>
-            </div>
-            <!-- /.form-group -->
-        </div>
-    </div>
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <h1>
+            Page Header
+            <small>Optional description</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
+            <li class="active">Here</li>
+        </ol>
+    </section>
+
+    <!-- Main content -->
+    <section class="content container-fluid">
+
+    </section>
 {% endblock %}
