--- a/app/templates/pages/examples/404.html
+++ b/app/templates/pages/examples/404.html
@@ -339,8 +339,8 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href={{ url_for('static',filename="index.html") }}><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                        <li><a href={{ url_for('static',filename="index2.html") }}><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                        <li><a href={{ url_for("index") }}><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                        <li><a href={{ url_for("index2") }}><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -352,13 +352,13 @@
         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                        <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                        <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
+                        <li><a href="../layout/top-nav"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
+                        <li><a href="../layout/boxed"><i class="fa fa-circle-o"></i> Boxed</a></li>
+                        <li><a href="../layout/fixed"><i class="fa fa-circle-o"></i> Fixed</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../widgets.html">
+                    <a href="../widgets">
                         <i class="fa fa-th"></i> <span>Widgets</span>
                         <span class="pull-right-container">
         <small class="label pull-right bg-green">new</small>
@@ -374,11 +374,11 @@
         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                        <li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                        <li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                        <li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
-                        <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+                        <li><a href="../charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                        <li><a href="../charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>
+                        <li><a href="../charts/flot"><i class="fa fa-circle-o"></i> Flot</a></li>
+                        <li><a href="../charts/inline"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                        <li><a href="../layout/collapsed-sidebar"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -390,12 +390,12 @@
         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../UI/general.html"><i class="fa fa-circle-o"></i> General</a></li>
-                        <li><a href="../UI/icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-                        <li><a href="../UI/buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                        <li><a href="../UI/sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                        <li><a href="../UI/timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
-                        <li><a href="../UI/modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
+                        <li><a href="../UI/general"><i class="fa fa-circle-o"></i> General</a></li>
+                        <li><a href="../UI/icons"><i class="fa fa-circle-o"></i> Icons</a></li>
+                        <li><a href="../UI/buttons"><i class="fa fa-circle-o"></i> Buttons</a></li>
+                        <li><a href="../UI/sliders"><i class="fa fa-circle-o"></i> Sliders</a></li>
+                        <li><a href="../UI/timeline"><i class="fa fa-circle-o"></i> Timeline</a></li>
+                        <li><a href="../UI/modals"><i class="fa fa-circle-o"></i> Modals</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -406,9 +406,9 @@
         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                        <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                        <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
+                        <li><a href="../forms/general"><i class="fa fa-circle-o"></i> General Elements</a></li>
+                        <li><a href="../forms/advanced"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
+                        <li><a href="../forms/editors"><i class="fa fa-circle-o"></i> Editors</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -419,12 +419,12 @@
         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                        <li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
+                        <li><a href="../tables/simple"><i class="fa fa-circle-o"></i> Simple tables</a></li>
+                        <li><a href="../tables/data"><i class="fa fa-circle-o"></i> Data tables</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../calendar.html">
+                    <a href="../calendar">
                         <i class="fa fa-calendar"></i> <span>Calendar</span>
                         <span class="pull-right-container">
         <small class="label pull-right bg-red">3</small>
@@ -433,7 +433,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../mailbox/mailbox.html">
+                    <a href="../mailbox/mailbox">
                         <i class="fa fa-envelope"></i> <span>Mailbox</span>
                         <span class="pull-right-container">
         <small class="label pull-right bg-yellow">12</small>
@@ -450,15 +450,15 @@
         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-                        <li><a href="profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
-                        <li><a href="login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-                        <li><a href="register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-                        <li><a href="lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-                        <li class="active"><a href="404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-                        <li><a href="500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-                        <li><a href="blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-                        <li><a href="pace.html"><i class="fa fa-circle-o"></i> Pace Page</a></li>
+                        <li><a href="invoice"><i class="fa fa-circle-o"></i> Invoice</a></li>
+                        <li><a href="profile"><i class="fa fa-circle-o"></i> Profile</a></li>
+                        <li><a href="login"><i class="fa fa-circle-o"></i> Login</a></li>
+                        <li><a href="register"><i class="fa fa-circle-o"></i> Register</a></li>
+                        <li><a href="lockscreen"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
+                        <li class="active"><a href="404"><i class="fa fa-circle-o"></i> 404 Error</a></li>
+                        <li><a href="500"><i class="fa fa-circle-o"></i> 500 Error</a></li>
+                        <li><a href="blank"><i class="fa fa-circle-o"></i> Blank Page</a></li>
+                        <li><a href="pace"><i class="fa fa-circle-o"></i> Pace Page</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
