--- a/app/templates/pages/UI/general.html
+++ b/app/templates/pages/UI/general.html
@@ -64,7 +64,7 @@
 
     <header class="main-header">
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="index2" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>A</b>LT</span>
             <!-- logo for regular state and mobile devices -->
@@ -366,8 +366,8 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="{{ url_for('static', filename="index.html") }}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                        <li><a href="{{ url_for('static', filename="index2.html") }}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                        <li><a href="{{ url_for('static', filename="index") }}"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                        <li><a href="{{ url_for('static', filename="index2") }}"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -379,14 +379,14 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                        <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                        <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                        <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+                        <li><a href="/layout/top-nav"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
+                        <li><a href="/layout/boxed"><i class="fa fa-circle-o"></i> Boxed</a></li>
+                        <li><a href="/layout/fixed"><i class="fa fa-circle-o"></i> Fixed</a></li>
+                        <li><a href="/layout/collapsed-sidebar"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../widgets.html">
+                    <a href="../widgets">
                         <i class="fa fa-th"></i> <span>Widgets</span>
                         <span class="pull-right-container">
               <small class="label pull-right bg-green">new</small>
@@ -402,10 +402,10 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                        <li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                        <li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                        <li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                        <li><a href="../charts/chartjs"><i class="fa fa-circle-o"></i> ChartJS</a></li>
+                        <li><a href="../charts/morris"><i class="fa fa-circle-o"></i> Morris</a></li>
+                        <li><a href="../charts/flot"><i class="fa fa-circle-o"></i> Flot</a></li>
+                        <li><a href="../charts/inline"><i class="fa fa-circle-o"></i> Inline charts</a></li>
                     </ul>
                 </li>
                 <li class="treeview active">
@@ -417,12 +417,12 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li class="active"><a href="general.html"><i class="fa fa-circle-o"></i> General</a></li>
-                        <li><a href="icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-                        <li><a href="buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                        <li><a href="sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                        <li><a href="timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
-                        <li><a href="modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
+                        <li class="active"><a href="general"><i class="fa fa-circle-o"></i> General</a></li>
+                        <li><a href="icons"><i class="fa fa-circle-o"></i> Icons</a></li>
+                        <li><a href="buttons"><i class="fa fa-circle-o"></i> Buttons</a></li>
+                        <li><a href="sliders"><i class="fa fa-circle-o"></i> Sliders</a></li>
+                        <li><a href="timeline"><i class="fa fa-circle-o"></i> Timeline</a></li>
+                        <li><a href="modals"><i class="fa fa-circle-o"></i> Modals</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -433,9 +433,9 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../forms/general.html"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                        <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                        <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
+                        <li><a href="../forms/general"><i class="fa fa-circle-o"></i> General Elements</a></li>
+                        <li><a href="../forms/advanced"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
+                        <li><a href="../forms/editors"><i class="fa fa-circle-o"></i> Editors</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
@@ -446,12 +446,12 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../tables/simple.html"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                        <li><a href="../tables/data.html"><i class="fa fa-circle-o"></i> Data tables</a></li>
+                        <li><a href="../tables/simple"><i class="fa fa-circle-o"></i> Simple tables</a></li>
+                        <li><a href="../tables/data"><i class="fa fa-circle-o"></i> Data tables</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../calendar.html">
+                    <a href="../calendar">
                         <i class="fa fa-calendar"></i> <span>Calendar</span>
                         <span class="pull-right-container">
               <small class="label pull-right bg-red">3</small>
@@ -460,7 +460,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../mailbox/mailbox.html">
+                    <a href="../mailbox/mailbox">
                         <i class="fa fa-envelope"></i> <span>Mailbox</span>
                         <span class="pull-right-container">
               <small class="label pull-right bg-yellow">12</small>
@@ -477,15 +477,15 @@
             </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="../examples/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-                        <li><a href="../examples/profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
-                        <li><a href="../examples/login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-                        <li><a href="../examples/register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-                        <li><a href="../examples/lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-                        <li><a href="../examples/404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-                        <li><a href="../examples/500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-                        <li><a href="../examples/blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-                        <li><a href="../examples/pace.html"><i class="fa fa-circle-o"></i> Pace Page</a></li>
+                        <li><a href="../examples/invoice"><i class="fa fa-circle-o"></i> Invoice</a></li>
+                        <li><a href="../examples/profile"><i class="fa fa-circle-o"></i> Profile</a></li>
+                        <li><a href="../examples/login"><i class="fa fa-circle-o"></i> Login</a></li>
+                        <li><a href="../examples/register"><i class="fa fa-circle-o"></i> Register</a></li>
+                        <li><a href="../examples/lockscreen"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
+                        <li><a href="../examples/404"><i class="fa fa-circle-o"></i> 404 Error</a></li>
+                        <li><a href="../examples/500"><i class="fa fa-circle-o"></i> 500 Error</a></li>
+                        <li><a href="../examples/blank"><i class="fa fa-circle-o"></i> Blank Page</a></li>
+                        <li><a href="../examples/pace"><i class="fa fa-circle-o"></i> Pace Page</a></li>
                     </ul>
                 </li>
                 <li class="treeview">
