--- a/app/templates/natural_semantic.html
+++ b/app/templates/natural_semantic.html
@@ -79,28 +79,28 @@
                             <a class="form-control" id="politics">正常</a>
                         </div>
                     </div>
-                    <div class="panel-group">
+                    <div class="panel-group" style="margin-top: 5%">
                         <label class="col-sm-2 control-label">涉黄</label>
 
                         <div class="col-sm-10">
                             <a class="form-control" id="porn">正常</a>
                         </div>
                     </div>
-                    <div class="panel-group">
+                    <div class="panel-group" style="margin-top: 10%">
                         <label class="col-sm-2 control-label">词联想</label>
 
                         <div class="col-sm-10">
                             <a class="form-control" id="word_association">无</a>
                         </div>
                     </div>
-                    <div class="panel-group">
+                    <div class="panel-group" style="margin-top: 15%">
                         <label class="col-sm-2 control-label">词性分析</label>
 
                         <div class="col-sm-10">
                             <a class="form-control" id="part_of_speech">无</a>
                         </div>
                     </div>
-                    <div class="panel-group">
+                    <div class="panel-group" style="margin-top: 20%">
                         <label class="col-sm-2 control-label">摘要</label>
 
                         <div class="col-sm-10">
