--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -259,8 +259,8 @@ desired effect
             <ul class="sidebar-menu" data-widget="tree">
                 <li class="header">类型</li>
                 <!-- Optionally, you can add icons to the links -->
-                <li class="active"><a href="{{ url_for('natural_semantic') }}"><i class="fa fa-edit"></i> <span>自然语义</span></a></li>
-                <li><a href="{{ url_for('image_identification') }}"><i class="fa fa-eye"></i> <span>图像鉴定</span></a></li>
+                <li id="choose_natural_semantic" class="active"><a href="{{ url_for('natural_semantic') }}"><i class="fa fa-edit"></i> <span>自然语义</span></a></li>
+                <li id="choose_image_identification"><a href="{{ url_for('image_identification') }}"><i class="fa fa-eye"></i> <span>图像鉴定</span></a></li>
                 <li class="treeview">
                     <a href="#"><i class="fa fa-circle-o"></i> <span>Multilevel</span>
                         <span class="pull-right-container">
