--- a/app/templates/natural_semantic.html
+++ b/app/templates/natural_semantic.html
@@ -76,35 +76,35 @@
                         <label class="col-sm-2 control-label">涉政</label>
 
                         <div class="col-sm-10">
-                            <a class="form-control" id="politics">正常</a>
+                            <p  id="politics">正常</p>
                         </div>
                     </div>
                     <div class="panel-group" style="margin-top: 5%">
                         <label class="col-sm-2 control-label">涉黄</label>
 
                         <div class="col-sm-10">
-                            <a class="form-control" id="porn">正常</a>
+                            <p  id="porn">正常</p>
                         </div>
                     </div>
                     <div class="panel-group" style="margin-top: 10%">
                         <label class="col-sm-2 control-label">词联想</label>
 
                         <div class="col-sm-10">
-                            <a class="form-control" id="word_association">无</a>
+                            <p  id="word_association">无</p>
                         </div>
                     </div>
                     <div class="panel-group" style="margin-top: 15%">
                         <label class="col-sm-2 control-label">词性分析</label>
 
                         <div class="col-sm-10">
-                            <a class="form-control" id="part_of_speech">无</a>
+                            <p  id="part_of_speech">无</p>
                         </div>
                     </div>
                     <div class="panel-group" style="margin-top: 20%">
                         <label class="col-sm-2 control-label">摘要</label>
 
                         <div class="col-sm-10">
-                            <a class="form-control" id="abstract">无</a>
+                            <p  id="abstract">无</p>
                         </div>
                     </div>
                 </div>
@@ -144,18 +144,18 @@
                         part_of_speech_s += _key;
                         part_of_speech_s += ':';
                         part_of_speech_s += part_of_speech[_key];
-                        part_of_speech_s += '--';
+                        part_of_speech_s += '&nbsp;&nbsp;&nbsp;';
                     }
-                    $('#part_of_speech').text(part_of_speech_s);
+                    $('#part_of_speech').html(part_of_speech_s);
 
                     let word_association_s = '';
                     for (let _key in word_association) {
                         word_association_s += _key;
                         word_association_s += ':';
                         word_association_s += word_association[_key];
-                        word_association_s += '--';
+                        word_association_s += '</br>';
                     }
-                    $('#word_association').text(word_association_s);
+                    $('#word_association').html(word_association_s);
 
                 }
             });
