--- a/app/templates/natural_semantic.html
+++ b/app/templates/natural_semantic.html
@@ -144,7 +144,7 @@
                         part_of_speech_s += _key;
                         part_of_speech_s += ':';
                         part_of_speech_s += part_of_speech[_key];
-                        part_of_speech_s += '&nbsp;&nbsp;&nbsp;';
+                        part_of_speech_s += '</br>';
                     }
                     $('#part_of_speech').html(part_of_speech_s);
 
