--- a/app/templates/image_identification.html
+++ b/app/templates/image_identification.html
@@ -70,7 +70,7 @@
                         <table id="table" class="table table-striped table-bordered table-hover datatable">
                             <thead id="tem">
                             <th>
-                                <img id="image" src="#" width="20%">
+                                <img id="image" src="/static/dist/img/icon.png" width="20%">
                             </th>
                             <th id="file_name">文件</th>
                             <th id="upload_time">上传时间</th>
