--- a/app/templates/image_identification.html
+++ b/app/templates/image_identification.html
@@ -72,7 +72,7 @@
                             <th>
                                 <img id="image" src="/static/dist/img/icon.png" width="20%">
                             </th>
-{#                            <th id="file_name">文件</th>#}
+                            {#                            <th id="file_name">文件</th>#}
                             <th id="upload_time">上传时间</th>
                             <th id="politics">涉政</th>
                             <th id="porn">色情</th>
@@ -262,9 +262,13 @@
                         row.find("#image").attr("src", obj[i].path.replace("app", ""));
                         {#row.find("#file_name").text(obj[i].path);#}
                         row.find("#upload_time").text(obj[i].upload_time);
-                        row.find("#porn").text(obj[i].porn);
                         {#row.find("#sexy").text(obj[i].sexy);#}
                         {#row.find("#normal").text(obj[i].normal);#}
+                        if ('porn' in obj[i]) {
+                            row.find("#porn").text(obj[i].porn);
+                        } else {
+                            row.find("#porn").text('无结果');
+                        }
                         if ('politics' in obj[i]) {
                             row.find("#politics").text(obj[i].politics);
                         } else {
